FE - multijaz components + views (bez ProfileView)

--- a/FE/src/locales/en.json
+++ b/FE/src/locales/en.json
@@ -4,6 +4,7 @@
   "registration": "Registration",
   "register": "Register",
   "up_registration": "REGISTRATION",
+  "logout": "Logout",
   "enter_code": "Enter code",
   "up_new_user": "NEW USER",
   "up_ex_user": "EXISTING USER",
@@ -13,7 +14,43 @@
   "confirm_password": "Confirm Password",
   "forgotten_password": "Forgotten password",
   "submit": "Submit",
+  "profile": "Profile",
   "reg_confirm_mail": "Registration confirmation is in your email!",
-  "one_more_step": "Just one more step!"
+  "login_success": "Login has been successful!",
+  "one_more_step": "Just one more step!",
+  "question": "Question",
+  "subject": "Subject",
+  "select_category": "Select a category",
+  "active?": "Active?",
+  "type": "Type",
+  "option": "Option",
+  "add_option": "Add option",
+  "cancel": "Cancel",
+  "save": "Save",
+  "with_open_answer": "With an open answer",
+  "with_options": "With options",
+  "info": "Information",
+  "choose_two_options": "You must choose at least 2 options.",
+  "not_empty_question": "The question must not be empty.",
+  "lang": "Languages",
+  "math": "Mathematics",
+  "history": "History",
+  "panda": "Panda",
+  "kangaroo": "Kangaroo",
+  "error_msg": "Error Message",
+  "success_msg": "Success",
+  "success_email_validation": "Now you can log in and enjoy answering all the super questions and polls!",
+  "error_email_validation": "Unfortunately, your email could not be validated. Please try again later.",
+  "email_validation": "Validating your email...",
+  "failed_email_validation": "Unable to verify email. Please try again later.",
+  "new_question_creation": "Create a new question",
+  "edit_question": "Edit the question",
+  "loading": "Loading",
+  "no_question_find": "No questions found. Start by creating!",
+  "create_question": "Create a question",
+  "filter_several_columns": "By holding down the Ctrl (or CMD) key, it is possible to filter several columns at once!",
+  "created": "Created",
+  "code": "Code",
+  "tools": "Tools"
 
 }
