--- a/FE/src/locales/sk.json
+++ b/FE/src/locales/sk.json
@@ -4,6 +4,7 @@
   "registration": "Registrácia",
   "register": "Registrovať",
   "up_registration": "REGISTRÁCIA",
+  "logout": "Odhlásiť sa",
   "enter_code": "Zadajte kód",
   "up_new_user": "NOVÝ POUŽÍVATEĽ",
   "up_ex_user": "EXISTUJÚCI POUŽÍVATEĽ",
@@ -13,7 +14,43 @@
   "confirm_password": "Potvrď heslo",
   "forgotten_password": "Zabudnuté heslo",
   "submit": "Odoslať",
+  "profile": "Profil",
   "reg_confirm_mail": "Potvrdenie registrácie je na vašom e-maily!",
-  "one_more_step": "Už iba krôčik!"
+  "login_success": "Prihlásenie prebehlo úspešne!",
+  "one_more_step": "Už iba krôčik!",
+  "question": "Otázka",
+  "subject": "Predmet",
+  "select_category": "Vyberte kategóriu",
+  "active?": "Aktívna?",
+  "type": "Typ",
+  "option": "Možnosť",
+  "add_option": "Pridať možnosť",
+  "cancel": "Zrušiť",
+  "save": "Uložiť",
+  "with_open_answer": "S otvorenou odpoveďou",
+  "with_options": "S možnosťami",
+  "info": "Informácia",
+  "choose_two_options": "Musíte si vybrať aspoň 2 možnosti.",
+  "not_empty_question": "Otázka nesmie byť prázdna.",
+  "lang": "Jazyky",
+  "math": "Matematika",
+  "history": "História",
+  "panda": "Panda",
+  "kangaroo": "Klokan",
+  "error_msg": "Error Message",
+  "success_msg": "Operácia prebehla úspešne",
+  "success_email_validation": "Teraz sa môžete prihlásiť a užiť si zodpovedanie na všetky super otázky a ankety!",
+  "error_email_validation": "Váš e-mail sa bohužiaľ nepodarilo overiť. Skúste to prosím neskôr.",
+  "email_validation": "Overenie vašej e-mailovej adresy...",
+  "failed_email_validation": "Nepodarilo sa overiť e-mail. Skúste to prosím neskôr.",
+  "new_question_creation": "Vytvorenie novej otázky",
+  "edit_question": "Úprava otázky",
+  "loading": "Načítavam",
+  "no_question_find": "Neboli nájdene žiadne otázky. Začnite vytvorením!",
+  "create_question": "Vytvoriť otázku",
+  "filter_several_columns": "Pri podržaní klávesy\n          Ctrl (prip. CMD) je\n          možné filtrovať\n          viacero stľpov\n          naraz!",
+  "created": "Vytvorené",
+  "code": "Kód",
+  "tools": "Nástroje"
 
 }
