--- a/FE/src/locales/sk.json
+++ b/FE/src/locales/sk.json
@@ -7,6 +7,7 @@
   "logout": "Odhlásiť sa",
   "enter_code": "Zadajte kód",
   "up_new_user": "NOVÝ POUŽÍVATEĽ",
+  "create_user": "Vytvoriť nového používateľa",
   "up_ex_user": "EXISTUJÚCI POUŽÍVATEĽ",
   "name": "Meno",
   "surname": "Priezvisko",
@@ -62,6 +63,8 @@
   "change_password": "Zmeniť heslo",
   "up_reset_password": "OBNOVENIE HESLA",
   "change_password_success": "Heslo úspešne zmenené!",
-  "password_reset_email_confirm": "Do schránky vám prišiel potvrdzovací mail na resetovanie hesla."
+  "password_reset_email_confirm": "Do schránky vám prišiel potvrdzovací mail na resetovanie hesla.",
+  "no_user_find": "Neboli nájdení žiadni používatelia. Začnite tým, že si ho vytvoríte!",
+  "select_status": "Vyberte status"
 
 }
