--- a/FE/src/locales/sk.json
+++ b/FE/src/locales/sk.json
@@ -65,6 +65,10 @@
   "change_password_success": "Heslo úspešne zmenené!",
   "password_reset_email_confirm": "Do schránky vám prišiel potvrdzovací mail na resetovanie hesla.",
   "no_user_find": "Neboli nájdení žiadni používatelia. Začnite tým, že si ho vytvoríte!",
-  "select_status": "Vyberte status"
+  "select_status": "Vyberte status",
+  "user_manual": "Používateľská príručka",
+  "up_user_manual": "POUŽÍVATEĽSKÁ PRÍRUČKA",
+  "home": "Domov",
+  "to_pdf": "Export do PDF"
 
 }
