FE - /auth filtrovanie tabulky + sk/en

--- a/FE/src/locales/sk.json
+++ b/FE/src/locales/sk.json
@@ -72,6 +72,13 @@
   "edit_subject": "Upraviť predmety",
   "join_question": "Pripoj sa na otázku!",
   "close": "Zavrieť",
+  "search_subject": "Vyhľadať predmet",
+  "users": "Používatelia",
+  "stats": "Štatistika",
+  "title": "Názov",
+  "add": "Pridať",
+  "confirm": "Potvrdiť",
+  "answer": "Odpoveď",
 
   "instructions_for_non_logged_in_user": "Návod pre neprihláseného používateľa",
   "up_instructions_for_non_logged_in_user": "NÁVOD PRE NEPRIHLÁSENÉHO POUŽÍVATEĽA",
