--- a/FE/src/locales/en.json
+++ b/FE/src/locales/en.json
@@ -72,6 +72,13 @@
   "edit_subject": "Edit subject",
   "join_question": "Join in the question!",
   "close": "Close",
+  "search_subject": "Search subject",
+  "users": "Users",
+  "stats": "Statistics",
+  "title": "Title",
+  "add": "Add",
+  "confirm": "Confirm",
+  "answer": "Answer",
 
   "instructions_for_non_logged_in_user": "Instructions for a non-logged-in user",
   "up_instructions_for_non_logged_in_user": "INSTRUCTIONS FOR A NON-LOGGED-IN USER",
