FE - export dat

--- a/FE/src/locales/sk.json
+++ b/FE/src/locales/sk.json
@@ -80,6 +80,7 @@
   "confirm": "Potvrdiť",
   "answer": "Odpoveď",
   "error": "Chyba",
+  "export_data": "Export",
 
   "instructions_for_non_logged_in_user": "Návod pre neprihláseného používateľa",
   "up_instructions_for_non_logged_in_user": "NÁVOD PRE NEPRIHLÁSENÉHO POUŽÍVATEĽA",
