--- a/FE/src/locales/en.json
+++ b/FE/src/locales/en.json
@@ -80,6 +80,7 @@
   "confirm": "Confirm",
   "answer": "Answer",
   "error": "Error",
+  "export_data": "Export",
 
   "instructions_for_non_logged_in_user": "Instructions for a non-logged-in user",
   "up_instructions_for_non_logged_in_user": "INSTRUCTIONS FOR A NON-LOGGED-IN USER",
